feat: Add container for oder summery

--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -5,3 +5,14 @@
 .product-container-bag {
     box-shadow: 0 2px 8px 0 rgb(0 0 0 / 17%);
 }
+
+.order-summary {
+    background-color: #dfdfdf;
+    height: fit-content
+}
+
+.divder-bag {
+    max-width: 90%;
+    border-top: dashed 1px #000;
+    background-color: #fff;
+}
