refactor: Create extra css sheet for qty input and add it to product_detail

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,6 +5,7 @@
 {% block extra_css %}
 <!-- Products CSS -->
 <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
+<link rel="stylesheet" href="{% static 'css/quantity_input.css' %}">
 {% endblock %}
 
 {% block content %}
