--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,10 +14,10 @@
     <div class="container margin-top">
         <h1>Bag</h1>
         {% if bag_items %}
-        <div class="d-flex flex-row justify-content-around">
+        <div class="d-flex flex-md-row flex-column justify-content-around">
             <div class="d-flex flex-column">
                 {% for item in bag_items %}
-                <div class="d-flex align-items-center product-container-bag mb-4 py-2 px-4">
+                <div class="d-flex flex-md-row flex-column align-items-center product-container-bag mb-4 py-2 px-4">
                     <div class="product-image-container-bag">
                         <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
                                 src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
@@ -76,11 +76,33 @@
             </div>
             <div class="order-summary p-4">
                 <h2>Summary</h2>
-                <p><strong>Order Subtotal:&nbsp;</strong>{{ total|intcomma }}&nbsp;€</p>
                 <hr class="divder-bag">
-                <p><strong>Delivery:&nbsp;</strong>{{ delivery|intcomma }}&nbsp;€</p>
-                <hr class="divder-bag">
-                <p><strong>Order Total:&nbsp;</strong>{{ grand_total|intcomma }}&nbsp;€</p>
+                <table>
+                    <tr>
+                        <td>
+                            <p>Order Subtotal:&nbsp;</p>
+                        </td>
+                        <td>
+                            <p>{{ total|intcomma }}&nbsp;€</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Delivery:&nbsp;</p>
+                        </td>
+                        <td>
+                            <p>{{ delivery|intcomma }}&nbsp;€</p>
+                        </td>
+                    </tr>
+                    <tr class="order-total">
+                        <td>
+                            <p class="pt-2"><strong>Order Total:&nbsp;</strong></p>
+                        </td>
+                        <td>
+                            <p class="pt-2">{{ grand_total|intcomma }}&nbsp;€</p>
+                        </td>
+                    </tr>
+                </table>
                 {% if free_delivery_delta > 0 %}
                 <p class="mb-1 free-deliver-delta">
                     Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free delivery!
@@ -99,6 +121,5 @@
     </a>
     {% endif %}
     </div>
-
 </main>
 {% endblock content %}
