--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -1,5 +1,6 @@
 .product-image-container-bag {
     height: 100px;
+    width: 30%;
 }
 
 .product-container-bag {
@@ -23,4 +24,15 @@
 
 .free-deliver-delta {
     color: #cd4c1e;
+}
+
+.shopping-cart .input-group>.form-control {
+    flex: none;
+    width: fit-content;
+}
+
+@media only screen and (max-width: 454px) {
+    .product-image-container-bag {
+        width: auto;
+    }
 }
