--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,66 +11,70 @@
 {% block content %}
 <main>
     <!-- Shopping Bag -->
-    <div class="margin-top">
+    <div class="margin-top shopping-cart mx-3">
         <h1>Bag</h1>
         {% if bag_items %}
         <div class="d-flex flex-md-row flex-column justify-content-around">
             <div class="d-flex flex-column">
                 {% for item in bag_items %}
-                <div class="d-flex flex-sm-row flex-column align-items-center product-container-bag mb-4 py-2 px-4">
-                    <div class="product-image-container-bag">
-                        <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
-                                src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                <div
+                    class="d-flex flex-sm-row flex-column align-items-center justify-content-between product-container-bag mb-4 py-2 px-4">
+                    <div class="d-flex flex-row align-items-center">
+                        <div class="product-image-container-bag">
+                            <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
+                                    src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                        </div>
+                        <div>
+                            <p class="mt-2 ms-1"><strong>{{ item.product.title }}</strong></p>
+                            <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                            {% if item.product.sale %}
+                            <p class="product-sale-price price mb-0 mt-4">{{ item.product.sale_price|intcomma }}€</p>
+                            <p class="strike-price">{{ item.product.retail_price|intcomma }}€</p>
+                            {% else %}
+                            <p class="price mt-4">{{ item.product.retail_price|intcomma }}€</p>
+                            {% endif %}
+                        </div>
                     </div>
                     <div>
-                        <p class="mt-2 ms-1"><strong>{{ item.product.title }}</strong></p>
-                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
-                        {% if item.product.sale %}
-                        <p class="product-sale-price price mb-0 mt-4">{{ item.product.sale_price|intcomma }}€</p>
-                        <p class="strike-price">{{ item.product.retail_price|intcomma }}€</p>
-                        {% else %}
-                        <p class="price mt-4">{{ item.product.retail_price|intcomma }}€</p>
-                        {% endif %}
-                    </div>
-                    <form class="form" action="" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <div class="input-group mb-3 d-flex align-items-center">
-                                        <div class="input-group-prepend pe-2">
-                                            <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                            min="1" max="99" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}" required>
-                                        <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
-                                        <div class="input-group-append ps-2">
-                                            <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
+                        <form class="form" action="" method="POST">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <div class="input-group mb-3 d-flex align-items-center">
+                                            <div class="input-group-prepend pe-2">
+                                                <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
+                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control qty_input" type="number" name="quantity"
+                                                value="1" min="1" max="99" data-item_id="{{ product.id }}"
+                                                id="id_qty_{{ product.id }}" required>
+                                            <div class="input-group-append ps-2">
+                                                <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
+                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <a class="btn btn-shop-now bg-orange update-link justify-content-end">
-                                        Update
-                                    </a>
-                                    <a class="btn btn-shop-now bg-orange remove-item justify-content-end ms-3">
-                                        <i class="fa-regular fa-trash-can"></i>
-                                    </a>
+                                    <div class="d-flex align-items-center">
+                                        <a class="btn btn-shop-now bg-orange update-link justify-content-end">
+                                            Update
+                                        </a>
+                                        <a class="btn btn-shop-now bg-orange remove-item justify-content-end ms-3">
+                                            <i class="fa-regular fa-trash-can"></i>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
                 {% endfor %}
             </div>
