--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,14 +12,17 @@
 <main>
     <!-- Shopping Bag -->
     <div class="margin-top shopping-cart mx-3">
-        <h1>Bag</h1>
+        <h1 class="liner">Shopping Bag</h1>
+        <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg my-3 d-md-none">
+            Place Order
+        </button>
         {% if bag_items %}
         <div class="d-flex flex-md-row flex-column justify-content-around">
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column ">
                 {% for item in bag_items %}
                 <div
                     class="d-flex flex-sm-row flex-column align-items-center justify-content-between product-container-bag mb-4 py-2 px-4">
-                    <div class="d-flex flex-row align-items-center">
+                    <div class="d-flex flex-row align-items-center w-100">
                         <div class="product-image-container-bag">
                             <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
                                     src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
@@ -78,7 +81,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <div class="order-summary p-4">
+            <div class="order-summary p-lg-5 p-4 ms-md-2 ms-0 mb-4">
                 <h2>Summary</h2>
                 <hr class="divder-bag">
                 <table>
@@ -107,7 +110,7 @@
                         </td>
                     </tr>
                 </table>
-                <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end mb-2">
+                <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg mb-2">
                     Place Order
                 </button>
                 {% if free_delivery_delta > 0 %}
