--- a/static/css/base.css
+++ b/static/css/base.css
@@ -341,11 +341,12 @@ footer ul {
 }
 
 .btn-shop-now {
-    text-transform: capitalize;
     transition: all .4s ease;
     white-space: nowrap;
     border-radius: 0;
     color: #fff;
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
 }
 
 .btn-shop-now:hover {
