style: Add padding on mobile for order summary and add comments to shopping bag

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -17,9 +17,10 @@
             Place Order
         </button>
         {% if bag_items %}
-        <div class="d-flex flex-md-row flex-column justify-content-around">
+        <div class="d-flex flex-md-row flex-column justify-content-around mt-md-3">
             <div class="d-flex flex-column ">
                 {% for item in bag_items %}
+                <!-- Shopping Bag Item Details -->
                 <div
                     class="d-flex flex-sm-row flex-column align-items-center justify-content-between product-container-bag mb-4 py-2 px-4">
                     <div class="d-flex flex-row align-items-center w-100">
@@ -38,6 +39,7 @@
                             {% endif %}
                         </div>
                     </div>
+                    <!-- Shopping Bag Item Qty Update -->
                     <div>
                         <form class="form" action="" method="POST">
                             {% csrf_token %}
@@ -83,7 +85,8 @@
                 </div>
                 {% endfor %}
             </div>
-            <div class="order-summary p-lg-5 p-4 ms-md-2 ms-0 mb-4">
+            <!-- Order Summary -->
+            <div class="order-summary p-lg-5 ms-md-2 ms-0 mb-4">
                 <h2>Summary</h2>
                 <hr class="divder-bag">
                 <table>
