--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -43,6 +43,13 @@
     transform: scale(1.02);
 }
 
+
+@media only screen and (max-width: 991px) {
+    .order-summary {
+        padding: 2rem;
+    }
+}
+
 @media only screen and (max-width: 454px) {
     .product-image-container-bag {
         width: auto;
