style: Add with to input in shopping cart

--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -28,7 +28,7 @@
 
 .shopping-cart .input-group>.form-control {
     flex: none;
-    width: fit-content;
+    width: 60px;
 }
 
 .btn-qty-update-bag {
