feat: Add div for empty shopping back

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -123,13 +123,10 @@
         </div>
     </div>
     {% else %}
-    <p class="lead mb-5">Your bag is empty.</p>
-    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-        <span class="icon">
-            <i class="fas fa-chevron-left"></i>
-        </span>
-        <span class="text-uppercase">Keep Shopping</span>
-    </a>
+    <div class="d-flex flex-column align-items-center p-5">
+        <p>Your bag is empty.</strong></p>
+        <button class="btn btn-cta upper"><a href="{% url 'products' %}">Find a Bike</a></button>
+    </div>
     {% endif %}
     </div>
 </main>
