fix: Loosing filters when product added to bag from CLP. Save Filters by geteting a copy of the current query parameters, generating a url with remaining query paramenets, construction a new url for the view with the remaining filters and using the new url for the redirect. Also GET method was modified to save query paramenets from the filter, when product is added to bag from CLP

--- a/products/templates/products/components/add_to_cart_qty_1.html
+++ b/products/templates/products/components/add_to_cart_qty_1.html
@@ -1,4 +1,4 @@
-<form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+<form class="form" action="{% url 'add_to_bag' product.id %}?{{ request.GET.urlencode }}" method="POST">
     {% csrf_token %}
     <input class="form-control qty_input" type="number" name="quantity" value="1" style="display:none;" required>
     <input type="hidden" name="redirect_url" value="{{ request.path }}">
