--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -140,7 +140,15 @@
     $('.update-link').on('click', function (e) {
         e.preventDefault();
         const form = $(this).closest('div').find('.update-form');
-        form.submit();
+        const input = form.find('.qty_input');
+        const quantity = parseInt(input.val());
+        // Check if Input is within allowed range
+        if (quantity >= 1 && quantity <= 99) {
+            form.submit();
+        } else {
+            messages.error(request, 'Please enter a quantity between 1 and 99');
+            return false;
+        }
     });
     // Remove item and reload on click
     $('.remove-item').on('click', function (e) {
