--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,111 +33,11 @@
                 <p class="price mt-4">{{ product.retail_price|intcomma }}€</p>
                 {% endif %}
                 <hr class="devider-pdp">
-                <div class="d-flex align-items-center">
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <div class="input-group mb-3 d-flex align-items-center">
-                                        <div class="input-group-prepend pe-2">
-                                            <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                            min="1" max="99" data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}" required>
-                                        <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
-                                        <div class="input-group-append ps-2">
-                                            <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                    <button type="submit"
-                                        class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
-                                        <i class="fa-solid fa-cart-shopping"></i> Add to Bag
-                                    </button>
-                                    <a class="add-wishlist-pdp ms-3" href="#">
-                                        <i class="fa-regular fa-heart fa-sm"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                <!-- Add to Cart Section -->
+                {% include 'products/components/product_form_add_to_cart_pdp.html' %}
             </div>
-            <div class="accordion my-5" id="accordionDetail">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Description
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                        data-bs-parent="#accordionDetail">
-                        <div class="accordion-body">
-                            <p>{{ product.description }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Tech Details
-                        </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                        data-bs-parent="#accordionDetail">
-                        <div class="accordion-body">
-                            <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <td>Brand:</td>
-                                        <td>{{ product.brand }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Gender:</td>
-                                        <td>{{ product.get_gender_display }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Size:</td>
-                                        <td>{{ product.wheel_size }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Type:</td>
-                                        <td>{{ product.bike_type }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Material:</td>
-                                        <td>{{ product.material }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Derailleur :</td>
-                                        <td>{{ product.derailleur  }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Item number :</td>
-                                        <td>{{ product.sku  }}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- Detail Infos Accordion -->
+            {% include 'products/components/product_accordion_detail_info_pdp.html' %}
         </div>
     </div>
 </section>
