--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -65,39 +65,7 @@
 </button>
 <!-- Pagination -->
 {% if is_paginated %}
-<nav class="mt-auto" aria-label="Page navigation">
-    <ul class="pagination pagination-sm justify-content-center">
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-            <a class="page-link text-dark"
-                href="?{% if sort_by %}sort_by={{ sort_by }}&{% endif %}{% if selected_category %}category={{ selected_category }}&{% endif %}{% if selected_brand %}brand={{ selected_brand }}&{% endif %}page={{ page_obj.previous_page_number }}"
-                aria-label="Previous page"><span aria-hidden="true">←</span></a>
-        </li>
-        {% else %}
-        <li class="page-item disabled"><span class="page-link">←</span></li>
-        {% endif %} {% for i in paginator.page_range %} {% if page_obj.number == i %}
-        <li class="page-item active" aria-current="page">
-            <a class="page-link"
-                href="?{% if sort_by %}sort_by={{ sort_by }}&{% endif %}{% if selected_category %}category={{ selected_category }}&{% endif %}{% if selected_brand %}brand={{ selected_brand }}&{% endif %}page={{ i }}"
-                aria-label="Current page"><span aria-hidden="true">{{ i }}</span></a>
-        </li>
-        {% else %}
-        <li class="page-item">
-            <a class="page-link"
-                href="?{% if sort_by %}sort_by={{ sort_by }}&{% endif %}{% if selected_category %}category={{ selected_category }}&{% endif %}{% if selected_brand %}brand={{ selected_brand }}&{% endif %}page={{ i }}"
-                aria-label="Page {{ i }}"><span aria-hidden="true">{{ i }}</span></a>
-        </li>
-        {% endif %} {% endfor %} {% if page_obj.has_next %}
-        <li class="page-item">
-            <a class="page-link text-dark"
-                href="?{% if sort_by %}sort_by={{ sort_by }}&{% endif %}{% if selected_category %}category={{ selected_category }}&{% endif %}{% if selected_brand %}brand={{ selected_brand }}&{% endif %}page={{ page_obj.next_page_number }}"
-                aria-label="Next page"><span aria-hidden="true">→</span></a>
-        </li>
-        {% else %}
-        <li class="page-item disabled"><span class="page-link">→</span></li>
-        {% endif %}
-    </ul>
-</nav>
+{% include 'products/components/product_pagination_clp.html' %}
 {% endif %}
 {% endblock %}
 
