--- a/static/css/base.css
+++ b/static/css/base.css
@@ -381,6 +381,24 @@ footer ul {
     transition: border-color .3s;
 }
 
+/*=============== Toast Messages ===============*/
+.message-container {
+    position: fixed;
+    top: 60px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast {
+    width: auto;
+    max-width: 320px;
+}
+
+
 /*=============== Media ===============*/
 
 @media only screen and (max-width: 454px) {
