feat: Add toast templates for error, info and warning an loop thorugh it in base.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -396,7 +396,11 @@ footer ul {
 .toast {
     width: auto;
     max-width: 320px;
+    background-color: #ebedef;
+    color: #40464f;
+    border-color: #dadee1;
 }
+
 
 
 /*=============== Media ===============*/
