--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,17 @@
         {% if messages %}
         <div class="message-container">
             {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+            {% include 'components/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+            {% include 'components/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
             {% include 'components/toasts/toast_success.html' %}
+            {% else %}
+            {% include 'components/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
             {% endfor %}
         </div>
         {% endif %}
