--- a/templates/components/toasts/toast_error.html
+++ b/templates/components/toasts/toast_error.html
@@ -1,7 +1,7 @@
 <div id="toast" class="toast fade mx-auto custom-toast" data-bs-autohide="false" role="alert" aria-live="assertive"
     aria-atomic="true">
     <div class="toast-header bg-white text-dark">
-        <strong class="me-auto text-success"><i class="fa-solid fa-bicycle"></i>&nbsp;Success!</strong>
+        <strong class="me-auto text-danger"><i class="fa-solid fa-triangle-exclamation">&nbsp;Error!</i></strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
