--- a/templates/components/toasts/toast_info.html
+++ b/templates/components/toasts/toast_info.html
@@ -6,6 +6,6 @@
         </button>
     </div>
     <div class="toast-body bg-white">
-        {{ message }}
+        {{ message|safe }}
     </div>
 </div>
