fix: Missing block.super for postloadjs in product_list. Added block.super to be able to load existing JS from postloadjs from base.html

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -70,6 +70,7 @@
 {% endblock %}
 
 {% block postloadjs %}
+{{ block.super }}
 <!-- Products JS -->
 <script src="{% static 'products/js/back_to_top.js' %}"></script>
 <script src="{% static 'products/js/filters.js' %}"></script>
