--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -1,11 +1,48 @@
-<div id="toast" class="toast fade mx-auto custom-toast" data-bs-autohide="false" role="alert" aria-live="assertive"
-    aria-atomic="true">
-    <div class="toast-header bg-white text-dark">
+{% load humanize %}
+<div id="toast" class="toast fade mx-auto custom-toast rounded" data-bs-autohide="false" role="alert"
+    aria-live="assertive" aria-atomic="true">
+    <div class="arrow-up arrow-success"></div>
+    <div class="toast-header bg-white text-dark rounded-top">
         <strong class="me-auto text-success"><i class="fa-solid fa-bicycle"></i>&nbsp;Success!</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="toast-body bg-white rounded-bottom">
         {{ message|safe }}
+
+        {% if grand_total > 10  %}
+        <p class="logo-font bg-white text-black mt-2 liner">Your Bag ({{ product_count }})&nbsp;</p>
+        <div class="bag-notification-wrapper">
+            {% for item in bag_items %}
+            <div class="row">
+                <div class="col-3 my-1">
+                    <img class="w-100" src="{{ item.product.image.url }}">
+                </div>
+                <div class="col-9">
+                    <p class="my-0"><strong>{{ item.product.title }}</strong></p>
+                    <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="row">
+            <div class="col">
+                <strong>
+                    <p class="mt-3 mb-1 text-black">
+                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+                        <span class="float-right">{{ total|intcomma }}&nbsp;€</span>
+                    </p>
+                </strong>
+                {% if free_delivery_delta > 0 %}
+                <p class="mb-1 free-deliver-delta text-center">
+                    Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free delivery!
+                </p>
+                {% endif %}
+                <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0 w-100">
+                    <span class="btn btn-shop-now bg-orange text-center">Place your Order!</span>
+                </a>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
