--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 <div id="toast" class="toast fade mx-auto custom-toast rounded" data-bs-autohide="false" role="alert"
     aria-live="assertive" aria-atomic="true">
-    <div class="arrow-up arrow-success"></div>
+    <div class="arrow-up"></div>
     <div class="toast-header bg-white text-dark rounded-top">
         <strong class="me-auto text-success"><i class="fa-solid fa-bicycle"></i>&nbsp;Success!</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
